@@ -1314,37 +1314,19 @@ function ds() {
 	$i = 0;
 	if (sizeof($data_sources) > 0) {
 		foreach ($data_sources as $data_source) {
-			$data_source["data_template_name"] = htmlspecialchars($data_source["data_template_name"]);
-			$data_name_cache = title_trim(htmlspecialchars($data_source["name_cache"]), read_config_option("max_title_data_source"));
-
-			if (trim(get_request_var_request("filter") != "")) {
-				$data_source['data_input_name'] = (preg_replace("/(" . preg_quote(get_request_var_request("filter"), "/") . ")/i", "<span style='background-color: #F8D93D;'>\\1</span>", htmlspecialchars($data_source['data_input_name'])));
-				$data_source['data_template_name'] = preg_replace("/(" . preg_quote(get_request_var_request("filter"), "/") . ")/i", "<span style='background-color: #F8D93D;'>\\1</span>", $data_source['data_template_name']);
-				$data_name_cache = preg_replace("/(" . preg_quote(get_request_var_request("filter"), "/") . ")/i", "<span style='background-color: #F8D93D;'>\\1</span>", ($data_name_cache));
-			}
-
-			/* keep copy of data source for comparison */
-			$data_source_orig = $data_source;
-			$data_source = plugin_hook_function('data_sources_table', $data_source);
-			/* we're escaping strings here, so no need to escape them on form_selectable_cell */
-			if ($data_source_orig["data_template_name"] != $data_source["data_template_name"]) {
-				/* was changed by plugin, plugin has to take care for html-escaping */
-				$data_template_name = ((empty($data_source["data_template_name"])) ? "<em>None</em>" : $data_source["data_template_name"]);
-			} else {
-				/* we take care of html-escaping */
-				$data_template_name = ((empty($data_source["data_template_name"])) ? "<em>None</em>" : htmlspecialchars($data_source["data_template_name"]));
-			}
-			if ($data_source_orig["data_input_name"] != $data_source["data_input_name"]) {
-				/* was changed by plugin, plugin has to take care for html-escaping */
-				$data_input_name = ((empty($data_source["data_input_name"])) ? "<em>None</em>" : $data_source["data_input_name"]);
-			} else {
-				/* we take care of html-escaping, see above */
-				$data_input_name = ((empty($data_source["data_input_name"])) ? "<em>External</em>" : $data_source["data_input_name"]);
-			}
+			/* prepare the data: apply filter and encoding */
+ 			$data_source["data_template_name"] = filter_highlight_and_encode($data_source["data_template_name"], get_request_var_request("filter"));
+ 			$data_source["data_input_name"]    = filter_highlight_and_encode($data_source["data_input_name"],    get_request_var_request("filter"));
+ 			$data_name_cache                   = filter_highlight_and_encode(title_trim($data_source["name_cache"], read_config_option("max_title_data_source")), get_request_var_request("filter"));
+			/* plugin */
+ 			$data_source = api_plugin_hook_function('data_sources_table', $data_source);
+ 			/* special cases */
+ 			$data_template_name = ((empty($data_source["data_template_name"])) ? "<em>None</em>"     : $data_source["data_template_name"]);
+ 			$data_input_name    = ((empty($data_source["data_input_name"]))    ? "<em>External</em>" : $data_source["data_input_name"]);
 			$poller_interval    = ((isset($poller_intervals[$data_source["local_data_id"]])) ? $poller_intervals[$data_source["local_data_id"]] : 0);
-
+			/* display each column */
 			form_alternate_row_color($colors["alternate"], $colors["light"], $i, 'line' . $data_source["local_data_id"]); $i++;
-			form_selectable_cell("<a class='linkEditMain' href='" . htmlspecialchars("data_sources.php?action=ds_edit&id=" . $data_source["local_data_id"]) . "' title='" . $data_source["name_cache"] . "'>" . ((get_request_var_request("filter") != "") ? preg_replace("/(" . preg_quote(get_request_var_request("filter"), "/") . ")/i", "<span style='background-color: #F8D93D;'>\\1</span>", title_trim(htmlspecialchars($data_source["name_cache"]), read_config_option("max_title_data_source"))) : title_trim(htmlspecialchars($data_source["name_cache"]), read_config_option("max_title_data_source"))) . "</a>", $data_source["local_data_id"]);
+ 			form_selectable_cell("<a class='linkEditMain' href='" . htmlspecialchars("data_sources.php?action=ds_edit&id=" . $data_source["local_data_id"]) . "' title='" . htmlspecialchars($data_source["name_cache"], ENT_QUOTES) . "'>" . $data_name_cache . "</a>", $data_source["local_data_id"]);
 			form_selectable_cell($data_source['local_data_id'], $data_source['local_data_id']);
 			form_selectable_cell($data_input_name, $data_source["local_data_id"]);
 			form_selectable_cell(get_poller_interval($poller_interval), $data_source["local_data_id"]);
