@@ -22,6 +22,7 @@ Cacti CHANGELOG
 -bug#0002269: |query_ifSpeed| in --upper-limit for graph template does not work
 -bug#0002274: Graph template ucd/net - Memory Usage has incorrect base value
 -bug#0002280: meta http-equiv=refresh content in lib/graph_export.php contains to many apostrophes (more findings apply)
+-bug#0002298: filtering/highlighting of data sources is broken
 -bug: avoid PHP "pass by reference" error for ping function
 -bug: GRPINT now supporting AVERAGE, LAST, MAX and MIN correctly (MAX of MAX, MAX of AVERAGEs now possible)
 -bug: Logarithmic Scaling and units-si dependencies fixed (thanks to ke6oms)
